spell check, fix resume align

--- a/css/main.css
+++ b/css/main.css
@@ -193,7 +193,11 @@ a:hover{
 footer{
     background-color: #81D0D4;
 }
-
+@media (max-width: 767px){
+    #resume div.col-md.text-right{
+        text-align: left!important;
+    }
+}
 
 
 
